--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@
 
 Flask==1.1.1
 gunicorn==19.9.0
+numpy==1.22.1
 pandas==0.25.0
 requests==2.22.0
-# scikit-learn==0.21.2
+scikit-learn==0.21.2
 # scipy==1.3.1
