--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,29 @@
-# certifi==2021.10.8
-# charset-normalizer==2.0.10
-# click==7.1.2
-# Flask==1.1.4
-# idna==3.3
-# itsdangerous==1.1.0
-# Jinja2==2.11.3
-# joblib==1.1.0
-# MarkupSafe==2.0.1
-# numpy==1.22.1
-# pandas==1.3.5
-# python-dateutil==2.8.2
-# pytz==2021.3
-# requests==2.27.1
-# scikit-learn==1.0.2
-# scipy==1.7.3
-# six==1.16.0
-# sklearn==0.0
-# threadpoolctl==3.0.0
-# urllib3==1.26.8
-# Werkzeug==1.0.1
-
-Flask==1.1.1
-gunicorn==19.9.0
+certifi==2021.10.8
+charset-normalizer==2.0.10
+click==7.1.2
+Flask==1.1.4
+idna==3.3
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.1.0
+MarkupSafe==2.0.1
 numpy==1.22.1
-pandas==0.25.0
-requests==2.22.0
-scikit-learn==0.21.2
+pandas==1.3.5
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.7.3
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.0.0
+urllib3==1.26.8
+Werkzeug==1.0.1
+
+# Flask==1.1.1
+# gunicorn==19.9.0
+# numpy==1.22.1
+# pandas==0.25.0
+# requests==2.22.0
+# scikit-learn==0.21.2
 # scipy==1.3.1
