--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ sklearn==0.0
 # Werkzeug==1.0.1
 
 # Flask==1.1.1
-# gunicorn==19.9.0
+gunicorn==20.1.0
 # numpy==1.22.1
 # pandas==0.25.0
 # requests==2.22.0
